--- a/firstQuiz.html
+++ b/firstQuiz.html
@@ -4,10 +4,11 @@
     <meta charset='utf-8'/>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title> First Quiz</title>
-    <script defer type='module' src="firstQuiz.js"></script>
+    <script defer src="firstQuiz.js"></script>
 </head>
 <body>
-    
+    <div id="quizBox"></div>
+    <button id="submit">Get Results</button>
+    <div id="results"></div>
 </body>
-
 </html>
